--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.10.0",
+    "@mui/x-date-pickers": "^8.10.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-draggable": "^4.5.0",
     "react-hot-toast": "^2.6.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
