--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
+    "mui-tel-input": "^9.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-draggable": "^4.5.0",
