--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "mui-tel-input": "^9.0.1",
@@ -26,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^3.1.1",
     "sass": "^1.90.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
